UniversityCollege_cssCleanup/skin.css
/* ... */
.footer-info * {
  font-size: 8pt;
  color: #858372;
}
.footer-info a {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: normal;
  font-size: 10pt;
}
.footer-info a:link, .footer-info a:visited, .footer-info a:active {
  color: #858372;
  text-decoration: none;
}
.footer-info a:hover {
  text-decoration: underline;
}

#dnn_BannerPane, #dnn_IntBanner {
  height: auto;
  position: relative;
  overflow: visible;
}
#dnn_BannerPane .iupui-template-wrap, #dnn_IntBanner .iupui-template-wrap {
  position: relative;
}
#dnn_BannerPane .iupui-template-wrap .info, #dnn_IntBanner .iupui-template-wrap .info {
  height: auto;
  position: absolute;
}
#dnn_BannerPane .iupui-template-wrap .desc h1, #dnn_BannerPane .iupui-template-wrap .desc h2, #dnn_BannerPane .iupui-template-wrap .desc h3, #dnn_BannerPane .iupui-template-wrap .desc p, #dnn_BannerPane .iupui-template-wrap .desc a, #dnn_IntBanner .iupui-template-wrap .desc h1, #dnn_IntBanner .iupui-template-wrap .desc h2, #dnn_IntBanner .iupui-template-wrap .desc h3, #dnn_IntBanner .iupui-template-wrap .desc p, #dnn_IntBanner .iupui-template-wrap .desc a {
  color: #f8f3d2;
}
#dnn_BannerPane .rotate-header-1, #dnn_IntBanner .rotate-header-1 {
  padding: 15px;
  background: #990000;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#990000', endColorstr='#7d110c');
  background: -webkit-gradient(linear, left top, left bottom, from(#990000), to(#7d110c));
  background: -moz-linear-gradient(top, #990000, #7d110c);
}
#dnn_BannerPane .rotate-header-1 h1, #dnn_IntBanner .rotate-header-1 h1 {
  width: 100%;
  height: auto;
  margin: 0 0 10px 0;
  display: block;
  background: none;
  text-transform: none;
  line-height: 16pt;
  font-weight: normal;
  font-size: 16pt;
  color: #f8f3d2;
}
#dnn_BannerPane .rotate-header-2, #dnn_IntBanner .rotate-header-2 {
  margin-top: 5px;
  padding: 10px 15px;
  background-image: url("img/rotate/80.png");
  background-repeat: repeat;
  background: rgba(0, 0, 0, 0.75);
  border-left: 5px solid #7d110c;
  color: #f8f3d2;
}
#dnn_BannerPane .rotate-header-2 h1, #dnn_IntBanner .rotate-header-2 h1 {
  width: 100%;
  height: auto;
  margin: 0 0 10px 0;
  padding-top: 5px;
  background: none;
  border-bottom: 1px solid;
  font: bold 13pt/9pt "Trebuchet MS", Arial, sans-serif;
}
#dnn_BannerPane .rotater-footer, #dnn_IntBanner .rotater-footer {
  width: 952px;
}

#dnn_BannerPane {
  width: 960px;
  height: auto;
}
#dnn_BannerPane .iupui-template-wrap {
  width: 952px;
  /*border: 4px #f8f3d2 solid;*/
}
#dnn_BannerPane .iupui-template-wrap .info, #dnn_BannerPane .iupui-template-wrap .desc {
  width: 450px;
}
#dnn_BannerPane .iupui-template-wrap .info {
  top: 70px;
  left: 435px;
}

#dnn_IntBanner {
  width: 735px;
  height: auto;
}
#dnn_IntBanner .iupui-template-wrap {
  width: 735px;
  border: none;
}
#dnn_IntBanner .iupui-template-wrap .info, #dnn_IntBanner .iupui-template-wrap .desc {
  width: 335px;
}
#dnn_IntBanner .iupui-template-wrap .info {
  top: 50px;
  left: 335px;
}

/** 
 * -------------------------------------------
 * Homepage Quicklinks CSS
 * -------------------------------------------
 **/
#dnn_QuicklinksPane #quicklinks {
  clear: both;
}
#dnn_QuicklinksPane #quicklinks .quicklinks-title {
  margin: 14px auto 0;
  padding: 0;
  display: inline-block;
  text-transform: uppercase;
  font-family: Arial,Helvetica, sans-serif;
  font-weight: bold;
  font-size: 8pt;
}
#dnn_QuicklinksPane #quicklinks .quicklinks {
  display: inline-block;
  clear: both;
}
#dnn_QuicklinksPane #quicklinks ul {
  margin: 0;
  padding: 0;
  display: inline-block;
}
#dnn_QuicklinksPane #quicklinks li {
  display: inline-block;
}
#dnn_QuicklinksPane #quicklinks a {
  padding: 0 6px;
  text-decoration: none;
  font-size: 8.5pt;
}
#dnn_QuicklinksPane #quicklinks a:hover {
  text-decoration: underline;
}

#dnn_QuicklinksPane .quicklinks-title, #dnn_QuicklinksPane .quicklinks a {
  color: #f8f3d2;
}

/** 
 * -------------------------------------------
 * Quicklinks Sidebar CSS
 * -------------------------------------------
 **/
#quicklinks-int {
  margin: 25px 0 10px;
  background: url("img/quick-links.png") 0 0 no-repeat;
}
#quicklinks-int ul {
  margin: 0;
  padding: 25px 0;
  list-style: none;
}
#quicklinks-int.first {
  padding: 0 0 6px;
}
#quicklinks-int li {
  padding: 2px 0 0;
  font-size: 8pt;
  list-style: none;
}
#quicklinks-int li a {
  padding: 2px 0;
  display: block;
}

/** 
 * -------------------------------------------
 * Homepage Content CSS
 * -------------------------------------------
 **/
.main-body {
  width: 100%;
  min-width: 1040px;
  background: #f2f2f2 url("img/content_bg.jpg");
  padding-bottom: 15px;
}
.main-body .container {
  background: url("img/content_bg_top.jpg") no-repeat 0 0;
}

#dnn_NotificationPane {
  display: none;
}

#dnn_FirstPane, #dnn_SecondPane, #dnn_ThirdPane {
  margin-top: 25px;
  float: left;
}
#dnn_FirstPane h2, #dnn_SecondPane h2, #dnn_ThirdPane h2 {
  padding-bottom: 0;
}
#dnn_FirstPane ol, #dnn_FirstPane ul, #dnn_SecondPane ol, #dnn_SecondPane ul, #dnn_ThirdPane ol, #dnn_ThirdPane ul {
  font-size: 10pt;
  line-height: 16px;
  list-style-position: outside;
  padding: 0 0 15px 15px;
}
#dnn_FirstPane p, #dnn_SecondPane p, #dnn_ThirdPane p {
  margin: 0 0 4px 0;
}

#dnn_FirstPane, #dnn_SecondPane {
  width: 320px;
  margin-right: 40px;
}

#dnn_ThirdPane {
  width: 240px;
  margin: 18px 0 20px 0;
}

.ucol-news .articleImage, .article .articleImage {
  display: inline-block;
  margin-right: 10px;
  vertical-align: top;
}

.ucol-news {
  padding: 15px 0;
  border-top: 1px solid #c6c6c6;
}
.ucol-news h4 {
  font-size: #666;
  font-size: 10pt;
}
.ucol-news a {
  font-size: 9pt;
}
.ucol-news:first-child {
  border-top: none;
}
.ucol-news .articleLatestSummary {
  display: inline-block;
  width: 75%;
}
.ucol-news .articleLatestSummary a {
  display: block;
  padding-top: 3px;
}

.article {
  margin-bottom: 20px;
}
.article .articleSummary {
  display: inline-block;
  width: 86%;
}
/* ... */

